[package]
name = "rust-gsmarena"
version = "0.1.0"
edition = "2021"
authors = ["Ahsan Ahmed"]
readme = "README.md"
repository = "https://github.com/Ahsan-J/GSMScrapper"
description = "A Basic implementation of scrapper in rust"

[lib]
name = "GSMScraper"
path = "src/lib.rs"

[[bin]]
name = "scraper"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.12"
futures = "0.3.24"
tokio = { version = "1", features = ["full"] }
html5ever = "0.26.0"
regex = "1"
markup5ever_rcdom = "0.2.0"
