[package]
name = "rust-gsmarena"
version = "0.1.0"
edition = "2021"
authors = ["Ahsan Ahmed"]
readme = "README.md"
repository = "https://github.com/Ahsan-J/GSMScrapper"
description = "A Basic implementation of scrapper in rust"

[lib]
name = "gsm_scraper"
path = "src/lib.rs"

[[bin]]
name = "scraper"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.12", features= ["blocking"]}
html5ever = "0.26.0"
regex = "1"
markup5ever_rcdom = "0.2.0"
